cmake_minimum_required(VERSION 3.20)
project(test)

set(CMAKE_CXX_STANDARD 17)

add_executable(removeLinkedListElements src/main/cpp/RemoveLinkedListElements.cpp)
add_executable(romanToInteger src/main/cpp/RomanToInteger.cpp)
add_executable(lemonadeChange src/main/cpp/LemonadeChange.cpp)
add_executable(empty src/main/cpp/empty.cpp)
